hphp/hack/test/typecheck/classname/with_tconst_bad2.php.exp
File "with_tconst_bad2.php", line 13, characters 29-34:
Wrong type hint (Typing[4110])
File "with_tconst_bad2.php", line 13, characters 19-26:
This is an object of type C
File "with_tconst_bad2.php", line 12, characters 19-19:
  resulting from expanding the type constant CLoader::Ti
File "with_tconst_bad2.php", line 13, characters 38-45:
It is incompatible with an object of type stdClass
